# sailfriend

./: db.sqlite3  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
custom_user/: admin.py  choices.py  models.py  permissions.py  serializers.py  urls.py  views.py
custom_user/migrations/: 0001_initial.py  0002_customuser_is_superuser.py  0002_interestcategory_interest_userinterest.py  0003_alter_customuser_is_active.py  0004_customuserprofile.py
login/: permissions.py  views.py
user_interests/: apps.py
